[gd_scene load_steps=2 format=3 uid="uid://dn00yav1d4330"]

[ext_resource type="Script" uid="uid://dbu4glgxcu77c" path="res://scene_builder_server.gd" id="1_0wfyh"]

[node name="Main" type="Node2D"]
position = Vector2(268, 215)
script = ExtResource("1_0wfyh")
file_to_load = "res://saved_levels/the_clockwork_bathhouse_of_steam_and_secrets_v13_final_fixed_1.json"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]

[node name="FloorLayer" type="TileMapLayer" parent="NavigationRegion2D"]

[node name="WorldYSort" type="Node2D" parent="NavigationRegion2D"]
y_sort_enabled = true

[node name="WallContainer" type="Node2D" parent="NavigationRegion2D/WorldYSort"]

[node name="ObjectContainer" type="Node2D" parent="NavigationRegion2D/WorldYSort"]

[node name="NpcContainer" type="Node2D" parent="NavigationRegion2D/WorldYSort"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimeDisplayLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.091000006
anchor_top = 0.20400001
anchor_right = 0.091000006
anchor_bottom = 0.21100001
offset_left = 67.16799
offset_top = 22.807999
offset_right = 149.168
offset_bottom = 63.271988
theme_override_font_sizes/font_size = 32
text = "08:00"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true
