extends Node

enum RunMode {
	LISTEN_FOR_PYTHON,  # æ¨¡å¼1: (å¼€å‘) ç­‰å¾… Python è¿æ¥å¹¶å‘é€æŒ‡ä»¤
	LOAD_FROM_FILE      # æ¨¡å¼2: (æ¸¸ç©) å¯åŠ¨æ—¶ç›´æ¥åŠ è½½æœ¬åœ° JSON æ–‡ä»¶
}
@export var run_mode: RunMode = RunMode.LISTEN_FOR_PYTHON
@export_file("*.json") var file_to_load: String = "res://saved_levels/my_first_level.json"

# --- ç½‘ç»œè®¾ç½® (æ— å˜åŒ–) ---
const PORT = 8080
var server = TCPServer.new()
var peer = null

# --- èŠ‚ç‚¹å¼•ç”¨ (å°†åœ¨ Godot ç¼–è¾‘å™¨ä¸­è®¾ç½®) ---
@onready var floor_layer: TileMapLayer = $NavigationRegion2D/FloorLayer
@onready var wall_container: Node2D = $NavigationRegion2D/WorldYSort/WallContainer
@onready var object_container: Node2D = $NavigationRegion2D/WorldYSort/ObjectContainer
@onready var npc_container: Node2D = $NavigationRegion2D/WorldYSort/NpcContainer
@onready var world_y_sort: Node2D = $NavigationRegion2D/WorldYSort
@onready var navigation_region: NavigationRegion2D = $NavigationRegion2D
@onready var time_display_label: Label = $CanvasLayer/TimeDisplayLabel

# --- èµ„äº§è®¾ç½® ---
const ASSET_DIR = "res://generated_assets/" # å…±äº«æ–‡ä»¶å¤¹
const TILE_SIZE = Vector2i(16, 16) # ç“¦ç‰‡å¤§å°
const NPC_SCENE_PATH = "res://scenes/npc.tscn"
const AGENT_SCENE_PATH = "res://scenes/agent.tscn" # æ™ºèƒ½ä½“æ¨¡æ¿

	
func _ready():
	if run_mode == RunMode.LISTEN_FOR_PYTHON:
		print("ã€è¿è¡Œæ¨¡å¼ã€‘: ç›‘å¬ Python æŒ‡ä»¤...")
		start_network_server() # å¯åŠ¨æœåŠ¡å™¨
	elif run_mode == RunMode.LOAD_FROM_FILE:
		print("ã€è¿è¡Œæ¨¡å¼ã€‘: ä»æ–‡ä»¶åŠ è½½...")
		load_scene_from_json_file(file_to_load) # ç›´æ¥åŠ è½½æ–‡ä»¶
	
func _process(_delta):
	# 1. åªæœ‰åœ¨â€œç›‘å¬â€æ¨¡å¼ä¸‹æ‰æ£€æŸ¥ç½‘ç»œ
	if run_mode == RunMode.LISTEN_FOR_PYTHON:
		if server.is_connection_available():
			if peer != null:
				peer.disconnect_from_host()
			peer = server.take_connection()
			print("Python å®¢æˆ·ç«¯å·²è¿æ¥ï¼")
			
		if peer != null and peer.get_status() == StreamPeerTCP.STATUS_CONNECTED:
			var available_bytes = peer.get_available_bytes()
			if available_bytes > 0:
				var data = peer.get_data(available_bytes)
				var json_string = data[1].get_string_from_utf8()
				handle_command(json_string)
		elif peer != null and peer.get_status() == StreamPeerTCP.STATUS_NONE:
			print("Python å®¢æˆ·ç«¯å·²æ–­å¼€è¿æ¥ã€‚")
			peer = null
	
	# 2. æ— è®ºåœ¨å“ªç§æ¨¡å¼ä¸‹ï¼Œæ—¶é’Ÿ UI éƒ½å¿…é¡»æ›´æ–°
	time_display_label.text = WorldClock.get_current_time_string()
	
	
func start_network_server():
	print("åœºæ™¯æ„å»ºæœåŠ¡å™¨å¯åŠ¨ä¸­...")
	if server.listen(PORT) != OK:
		printerr("é”™è¯¯ï¼šæ— æ³•åœ¨ç«¯å£ %d ä¸Šå¯åŠ¨æœåŠ¡å™¨" % PORT)
		return
	print("æœåŠ¡å™¨å·²åœ¨ç«¯å£ %d ä¸ŠæˆåŠŸå¯åŠ¨ï¼Œç­‰å¾… Python æŒ‡ä»¤..." % PORT)

func load_scene_from_json_file(file_path: String):
	if not FileAccess.file_exists(file_path):
		printerr("åŠ è½½é”™è¯¯: æ‰¾ä¸åˆ°æ–‡ä»¶ %s" % file_path)
		return

	var file = FileAccess.open(file_path, FileAccess.READ)
	var content = file.get_as_text()
	file.close()
	
	var result = JSON.parse_string(content)
	if result == null:
		printerr("åŠ è½½é”™è¯¯: è§£æ JSON å¤±è´¥ %s" % file_path)
		return
	
	var scene_data = result as Dictionary
	if scene_data.is_empty():
		printerr("åŠ è½½é”™è¯¯: JSON æ–‡ä»¶ä¸ºç©º %s" % file_path)
		return
	
	call_deferred("build_scene_procedurally", scene_data)


func handle_command(json_string: String):
	print("æ”¶åˆ°æŒ‡ä»¤: ", json_string)
	var result = JSON.parse_string(json_string)
	if result == null:
		printerr("é”™è¯¯: è§£æ JSON å¤±è´¥")
		return
		
	var command = result as Dictionary
	var action = command.get("action", "")
	
	# --- åˆ†æ”¯ 1: æ„å»ºåœºæ™¯ ---
	if action == "build_scene_from_json":
		var scene_data = command.get("payload", null) as Dictionary
		if scene_data:
			build_scene_procedurally(scene_data)
		else:
			printerr("é”™è¯¯: 'build_scene_from_json' æŒ‡ä»¤ç¼ºå°‘ 'payload' æ•°æ®")
			
	# --- åˆ†æ”¯ 2: é«˜æ¸…æˆªå›¾ (æ–°å¢) ---
	elif action == "take_screenshot":
		var payload = command.get("payload", {}) as Dictionary
		var path = payload.get("path", "user://screenshot_4k.png")
		capture_hd_screenshot_without_moving_nodes(path)
		
	else:
		printerr("é”™è¯¯: æœªçŸ¥çš„ action: %s" % action)


func build_scene_procedurally(data: Dictionary) -> void:
	
	print("å¼€å§‹å…¨è‡ªåŠ¨åœºæ™¯æ„å»º...")

	floor_layer.z_index = -5
	
	for child in world_y_sort.get_children():
		child.queue_free()
		
	floor_layer.navigation_enabled = false
	
	var assets = data.get("assets", {}) as Dictionary
	var properties = data.get("properties", {}) as Dictionary
	var layout = data.get("layout", {}) as Dictionary
	
	

	var metadata = data.get("metadata", {}) as Dictionary
	var grid_size_arr = metadata.get("grid_size", [25, 20]) # ä» JSON è¯»å–
	var map_dims = Vector2i(grid_size_arr[0], grid_size_arr[1])

	# æ ¼å¼: { Vector2i(x, y): float_height_in_pixels }

	
	# æ­¥éª¤ A: åŠ¨æ€åˆ›å»º TileSet (ä½ çš„ä»£ç , åŸå°ä¸åŠ¨)
	print("Â  - æ­¥éª¤ A: åŠ¨æ€åˆ›å»º TileSet...")
	var tile_set = TileSet.new()
	tile_set.add_physics_layer()
	tile_set.add_navigation_layer()
	var source_id_map = {}
	var current_source_id = 0
	for asset_id in assets:
		var asset_details = assets[asset_id] as Dictionary
		if asset_details.get("type") == "tile": # åªå¤„ç† "tile"
			var asset_path = ASSET_DIR.path_join(asset_id + ".png")
			if not FileAccess.file_exists(asset_path):
				printerr("é”™è¯¯: æ‰¾ä¸åˆ°èµ„äº§æ–‡ä»¶ %s" % asset_path); continue
			
			var img = Image.new()
			var err = img.load(asset_path)
			if err != OK:
				printerr("é”™è¯¯: åŠ è½½å›¾åƒå¤±è´¥ %s (é”™è¯¯ç : %s)" % [asset_path, err]); continue
			
			var tex = ImageTexture.create_from_image(img)
			if tex == null:
				printerr("é”™è¯¯: ä»å›¾åƒåˆ›å»ºçº¹ç†å¤±è´¥ %s (å›¾åƒå¯èƒ½å·²æŸåæˆ–ä¸ºç©º)" % asset_path)
				continue # è·³è¿‡è¿™ä¸ªæŸåçš„èµ„äº§
			var atlas_source = TileSetAtlasSource.new()
			atlas_source.texture = tex
			var atlas_coord = Vector2i.ZERO
			# ä» JSON è¯»å– visual_size
			var v_size_arr = asset_details.get("visual_size", [1, 1])
			var v_size_vec = Vector2i(v_size_arr[0], v_size_arr[1])
			atlas_source.create_tile(atlas_coord, v_size_vec)
			tile_set.add_source(atlas_source, current_source_id)
			
			source_id_map[asset_id] = {
				"source_id": current_source_id, 
				"atlas_coord": atlas_coord,
				"texture": tex,
				"visual_size": v_size_vec
			}
			
			var tile_data = atlas_source.get_tile_data(atlas_coord, 0)
			#set_tile_properties(tile_data, properties.get(asset_id, {}) as Dictionary)
			set_tile_properties(tile_data, properties.get(asset_id, {}) as Dictionary, v_size_vec)
			current_source_id += 1
	floor_layer.tile_set = tile_set
	print("Â  - TileSet åˆ›å»ºå®Œæ¯•ï¼ŒåŒ…å« %d ä¸ªç“¦ç‰‡æºã€‚" % current_source_id)
	
	
	# æ­¥éª¤ B: ç»˜åˆ¶ TileMap å›¾å±‚ (ä½ çš„ä»£ç , åŸå°ä¸åŠ¨)
	print("Â  - æ­¥éª¤ B: ç»˜åˆ¶ç“¦ç‰‡å›¾å±‚ (ä»…åœ°æ¿)...") 
	for cmd_item in layout.get("floor_layer", []):
		var cmd = cmd_item as Dictionary
		var map_info = source_id_map.get(cmd.get("asset_id"))
		
		if map_info and cmd.get("command") == "fill_rect":
			var area_arr = cmd.get("area", [0, 0, 1, 1])
			var rect = Rect2i(area_arr[0], area_arr[1], area_arr[2], area_arr[3])
			var tile_visual_size = map_info.get("visual_size", Vector2i(1, 1))
			var tile_w = max(1, tile_visual_size.x) # æ­¥é•¿è‡³å°‘ä¸º 1
			var tile_h = max(1, tile_visual_size.y) # æ­¥é•¿è‡³å°‘ä¸º 1
 			# ä½¿ç”¨ 2x2 (tile_w, tile_h) çš„æ­¥é•¿æ¥å¾ªç¯
			for x in range(rect.position.x, rect.end.x, tile_w):
				for y in range(rect.position.y, rect.end.y, tile_h):
					floor_layer.set_cell(Vector2i(x, y), map_info.source_id, map_info.atlas_coord)

	print("Â  - æ­¥éª¤ B.5: å®ä¾‹åŒ–å¢™å£...")
	for cmd_item in layout.get("wall_layer", []):
		var cmd = cmd_item as Dictionary
		var asset_id = cmd.get("asset_id")
		
		var map_info = source_id_map.get(asset_id)
		if not map_info:
			printerr("é”™è¯¯: æ‰¾ä¸åˆ°å¢™å£ '%s' çš„èµ„äº§ä¿¡æ¯" % asset_id)
			continue
			
		var tex = map_info.texture as Texture2D
		if tex == null:
			printerr("é”™è¯¯: å¢™å£ '%s' çš„çº¹ç†ä¸ºç©º" % asset_id)
			continue

		# 2. è·å–å±æ€§ (ç”¨äºç‰©ç†)
		var props = properties.get(asset_id, {}) as Dictionary
		
		# 3. è§£ææŒ‡ä»¤
		var command = cmd.get("command")
		var area_arr = cmd.get("area", [0, 0, 1, 1])
		var rect = Rect2i(area_arr[0], area_arr[1], area_arr[2], area_arr[3])
		
		if command == "fill_rect":
			var wall_pixel_height = tex.get_height()
			# éå†è¿™ä¸ªçŸ©å½¢è¦†ç›–çš„æ‰€æœ‰æ ¼å­
			for wx in range(rect.position.x, rect.end.x):
				for wy in range(rect.position.y, rect.end.y):
					grid_wall_height_map[Vector2i(wx, wy)] = wall_pixel_height
		
		# 4. è°ƒç”¨æ–°çš„ Sprite å¡«å……å‡½æ•°
		if command == "fill_rect":
			#_fill_rect_with_sprites(wall_container, rect, tex, props)
			#_fill_rect_with_sprites(world_y_sort, rect, tex, props)
			_fill_rect_with_sprites(world_y_sort, rect, tex, props, map_dims)
		elif command == "draw_rect_outline":
			# (ä½ ä¹Ÿå¯ä»¥åˆ›å»ºä¸€ä¸ª _draw_rect_with_sprites å‡½æ•°)
			printerr("è­¦å‘Š: 'draw_rect_outline' å°šæœªå®ç°ä¸º Sprites")
		
	print("  - æ­¥éª¤ C: å®ä¾‹åŒ–å¯¹è±¡...")
	for cmd_item in layout.get("object_layer", []):
		var cmd = cmd_item as Dictionary
		var asset_id = cmd.get("asset_id")
		if assets.get(asset_id, {}).get("type") != "object": continue 
		
		var asset_path = ASSET_DIR.path_join(asset_id + ".png")
		if not FileAccess.file_exists(asset_path):
			printerr("é”™è¯¯: æ‰¾ä¸åˆ°å¯¹è±¡èµ„äº§ %s" % asset_path); continue
		
		var img = Image.new()
		var err = img.load(asset_path)
		if err != OK:
			printerr("é”™è¯¯: åŠ è½½å›¾åƒå¤±è´¥ %s" % asset_path); continue
			
		var tex = ImageTexture.create_from_image(img)
		var texture_size = tex.get_size() 
		
		var tile_pos = Vector2i(cmd.get("position")[0], cmd.get("position")[1])
		var world_pos_center = floor_layer.map_to_local(tile_pos)
		
		var sprite = Sprite2D.new()
		sprite.texture = tex
		sprite.name = asset_id
		sprite.centered = false
		sprite.offset = Vector2(-texture_size.x / 2.0, -texture_size.y)
		sprite.position = world_pos_center
		
		var props = properties.get(asset_id, {}) as Dictionary
		var asset_details = assets.get(asset_id, {}) as Dictionary
		var json_size_array = asset_details.get("base_size", null)
		
		var obstacle_base_size = texture_size 
		var obj_base_h = 1 
		
		if json_size_array != null and json_size_array.size() == 2:
			obstacle_base_size = Vector2(json_size_array[0], json_size_array[1]) * Vector2(TILE_SIZE)
			obj_base_h = json_size_array[1]

		# --- æ™ºèƒ½å¢™é¢é™„ç€åˆ¤å®š ---
		var is_hanging = false
		var target_wall_h = 0.0
		#var is_tolerance_snap = false 
		
		# åˆ¤å®š 1: åæ ‡é‡åˆ
		if tile_pos in grid_wall_height_map:
			is_hanging = true
			target_wall_h = grid_wall_height_map[tile_pos]
			
		## åˆ¤å®š 2: é‚»æ¥ä¸”å•å±‚åšåº¦
		#elif (tile_pos + Vector2i.UP) in grid_wall_height_map:
			#if obj_base_h == 1: 
				#is_hanging = true
				#is_tolerance_snap = true 
				#target_wall_h = grid_wall_height_map[tile_pos + Vector2i.UP]
				#print("    > [å¸é™„] æŒ‚ä»¶ '%s' @ %s å¸é™„åˆ°ä¸Šæ–¹å¢™å£" % [asset_id, tile_pos])

		if is_hanging:
			var obj_pixel_h = texture_size.y
			
			# æ£€æŸ¥çº¦æŸ: ç‰©ä½“é«˜åº¦å¿…é¡» <= å¢™å£é«˜åº¦
			if obj_pixel_h <= target_wall_h:
				
				# 1. å‚ç›´æå‡ç®—æ³•: (å¢™é«˜ - ç‰©ä½“é«˜) / 2
				# ç»“æœ: ç‰©ä½“å°†åœ¨å¢™é¢ä¸Šå‚ç›´å±…ä¸­
				var lift_amount = (target_wall_h - obj_pixel_h) / 2.0
				sprite.position.y -= lift_amount
				
				## 2. ä½ç½®ä¿®æ­£ (å¦‚æœæ˜¯ä»åœ°æ¿å¸é™„ä¸Šæ¥çš„)
				#if is_tolerance_snap:
					#sprite.position.y -= TILE_SIZE.y 
				
				# 3. æå‡å±‚çº§
				sprite.z_index = 1 
				
				print("    > [ç”Ÿæ•ˆ] æŒ‚ä»¶ '%s' å‚ç›´å±…ä¸­, æå‡ %.1f px" % [asset_id, lift_amount])
			else:
				print("    > [è·³è¿‡] æŒ‚ä»¶ '%s' é«˜åº¦ (%.1f) è¶…è¿‡å¢™é«˜ (%.1f), å–æ¶ˆæ‚¬æŒ‚" % [asset_id, obj_pixel_h, target_wall_h])
				
				
		# -----------------------------------------------------
		var is_floor_decor = false
		var phys = props.get("physics", "")
		var nav = props.get("navigation", "")
		var sem_tag = props.get("semantic_tag", "")
		
		# è§„åˆ™ï¼šå¯ç©¿è¿‡ + å¯è¡Œèµ° + ä¸æ˜¯é—¨ = åœ°æ¯¯/æ±¡æ¸
		if phys == "passable" and nav == "walkable":
			is_floor_decor = true
		
		# è§„åˆ™ï¼šæˆ–è€…æ˜ç¡®æ ‡è®°ä¸º rug/carpet
		if "rug" in asset_id or "carpet" in asset_id or "rug" in sem_tag or "carpet" in sem_tag:
			is_floor_decor = true
			
		# æ’é™¤ï¼šé—¨
		if "door" in sem_tag or nav == "walkable_door":
			is_floor_decor = false
			
		if is_floor_decor:
			# å¼ºåˆ¶æ”¾åœ¨æœ€åº•å±‚ï¼Œè®©äººè¸©åœ¨ä¸Šé¢
			sprite.z_index = -1
			print("    > [å±‚çº§] è¯†åˆ«ä¸ºåœ°æ¯¯/è£…é¥° '%s' -> z_index = -1" % asset_id)
		# -------------------------------------------
		
		var semantic_tag = props.get("semantic_tag", "")
		if not semantic_tag.is_empty():
			sprite.add_to_group(semantic_tag)
			
		set_object_properties(sprite, props, obstacle_base_size)
		world_y_sort.add_child(sprite)
		
		
	# æ­¥éª¤ D: å®ä¾‹åŒ– NPC å’Œ Agent
	print("Â  - æ­¥éª¤ D: å®ä¾‹åŒ– NPC å’Œ æ™ºèƒ½ä½“...")
	for cmd_item in layout.get("npc_layer", []): 
		var cmd = cmd_item as Dictionary
		var asset_id = cmd.get("asset_id")
		var asset_details = assets.get(asset_id, {}) as Dictionary
		var props = properties.get(asset_id, {}) as Dictionary
		var tile_pos = Vector2i(cmd.get("position")[0], cmd.get("position")[1])
		var asset_type = asset_details.get("type", "")
		
		# æ ¹æ®ç±»å‹ï¼Œè°ƒç”¨æ–°çš„å®ä¾‹åŒ–å‡½æ•°
		if asset_type == "npc" or asset_type == "agent":
			instantiate_character(asset_id, asset_type, props, tile_pos)

	print("  - æ­¥éª¤ E: çƒ˜ç„™å¯¼èˆªç½‘æ ¼...")
	var nav_poly_resource = NavigationPolygon.new()
	nav_poly_resource.set_parsed_collision_mask_value(1, true)
	nav_poly_resource.agent_radius = TILE_SIZE.x
	navigation_region.navigation_polygon = nav_poly_resource
	navigation_region.bake_navigation_polygon()
	await navigation_region.bake_finished
	print("  - å¯¼èˆªç½‘æ ¼çƒ˜ç„™å®Œæ¯•ï¼")
	
	# æ–°å¢ æ­¥éª¤ F: å¯åŠ¨ä¸–ç•Œæ—¶é’Ÿ
	print("  - æ­¥éª¤ F: å¯åŠ¨ä¸–ç•Œæ—¶é’Ÿ...")
	WorldClock.start_clock() # <--- åœ¨è¿™é‡Œå¯åŠ¨

	print("å…¨è‡ªåŠ¨åœºæ™¯æ„å»ºå®Œæ¯•ï¼")

func _internal_fill_rect(layer: TileMapLayer, rect: Rect2i, source_id: int, atlas_coord: Vector2i):

	for x in range(rect.position.x, rect.end.x):
		for y in range(rect.position.y, rect.end.y):
			layer.set_cell(Vector2i(x, y), source_id, atlas_coord)

func draw_rect_outline(layer: TileMapLayer, rect: Rect2i, source_id: int, atlas_coord: Vector2i):

	for x in range(rect.position.x, rect.end.x):
		layer.set_cell(Vector2i(x, rect.position.y), source_id, atlas_coord)
		layer.set_cell(Vector2i(x, rect.end.y - 1), source_id, atlas_coord)
	for y in range(rect.position.y, rect.end.y):
		layer.set_cell(Vector2i(rect.position.x, y), source_id, atlas_coord)
		layer.set_cell(Vector2i(rect.end.x - 1, y), source_id, atlas_coord)

func set_tile_properties(tile_data: TileData, props: Dictionary, tile_size_in_cells: Vector2i):
	
	var tile_pixel_size = tile_size_in_cells * TILE_SIZE # e.g., (2,2) * (16,16) = (32, 32)
	var half_pixel_size = tile_pixel_size / 2.0         # e.g., (16, 16)
	
		# --- ç‰©ç†å±‚è®¾ç½® (ä½¿ç”¨ä¸­å¿ƒåŸç‚¹) ---
	if props.get("physics") == "solid":
		var centered_square_polygon = PackedVector2Array([
			Vector2(-half_pixel_size.x, -half_pixel_size.y), # Top-left
			Vector2( half_pixel_size.x, -half_pixel_size.y), # Top-right
			Vector2( half_pixel_size.x,  half_pixel_size.y), # Bottom-right
			Vector2(-half_pixel_size.x,  half_pixel_size.y)  # Bottom-left
		])
		tile_data.set_collision_polygons_count(0, 1)
		tile_data.set_collision_polygon_points(0, 0, centered_square_polygon)
		
		# --- å¯¼èˆªå±‚è®¾ç½® (åŒæ ·ä½¿ç”¨ä¸­å¿ƒåŸç‚¹) ---
	if props.get("navigation") == "walkable":
		var nav_poly = NavigationPolygon.new()
		var centered_outline = PackedVector2Array([
			Vector2(-half_pixel_size.x, -half_pixel_size.y), # Top-left
			Vector2( half_pixel_size.x, -half_pixel_size.y), # Top-right
			Vector2( half_pixel_size.x,  half_pixel_size.y), # Bottom-right
			Vector2(-half_pixel_size.x,  half_pixel_size.y)  # Bottom-left
		])
		nav_poly.add_outline(centered_outline)
		nav_poly.make_polygons_from_outlines() # (ä¿ç•™æ­¤è­¦å‘Š)
		tile_data.set_navigation_polygon(0, nav_poly)

#func set_object_properties(node: Node2D, props: Dictionary, texture_size: Vector2):
	#var created_solid_body = false 
	#if props.get("physics") == "solid":
		#var body = StaticBody2D.new()
		#var shape_node = CollisionShape2D.new()
		#var rect_shape = RectangleShape2D.new()
		#rect_shape.size = texture_size
		#
		#shape_node.position = Vector2(0, -texture_size.y / 2.0)
		#
		#shape_node.shape = rect_shape
		#body.add_child(shape_node)
		#node.add_child(body)
		#created_solid_body = true # <-- 2. å¦‚æœåˆ›å»ºäº†ç‰©ç†ä½“ï¼Œå°±è®¾ç½®æ ‡å¿—
#
	##if props.get("navigation") == "obstacle":
#
	#if props.get("navigation") == "obstacle" and not created_solid_body:
		#var obstacle = NavigationObstacle2D.new()
		#var half_size = texture_size / 2.0
		#var centered_vertices = PackedVector2Array([
			#Vector2(-half_size.x, -half_size.y), # Top-left
			#Vector2( half_size.x, -half_size.y), # Top-right
			#Vector2( half_size.x,  half_size.y), # Bottom-right
			#Vector2(-half_size.x,  half_size.y)  # Bottom-left
		#])
		#obstacle.vertices = centered_vertices
		#obstacle.position = Vector2(0, -texture_size.y / 2.0)
		#node.add_child(obstacle)


func set_object_properties(node: Node2D, props: Dictionary, obstacle_base_size: Vector2):
	var created_solid_body = false # 
	
	# --- 1. ç‰©ç†å±‚ ---
	if props.get("physics") == "solid":
		var body = StaticBody2D.new()
		var shape_node = CollisionShape2D.new()
		var rect_shape = RectangleShape2D.new()

		rect_shape.size = obstacle_base_size

		shape_node.position = Vector2(0, -obstacle_base_size.y / 2.0)
		
		shape_node.shape = rect_shape
		body.add_child(shape_node)
		node.add_child(body)
		created_solid_body = true

	# --- 2. å¯¼èˆªå±‚ ---
	if props.get("navigation") == "obstacle" and not created_solid_body:
		var obstacle = NavigationObstacle2D.new()
		
		var half_size = obstacle_base_size / 2.0
		
		var centered_vertices = PackedVector2Array([
			Vector2(-half_size.x, -half_size.y), # Top-left
			Vector2( half_size.x, -half_size.y), # Top-right
			Vector2( half_size.x,  half_size.y), # Bottom-right
			Vector2(-half_size.x,  half_size.y)  # Bottom-left
		])
		obstacle.vertices = centered_vertices
		
		obstacle.position = Vector2(0, -obstacle_base_size.y / 2.0)
		
		node.add_child(obstacle)


func instantiate_character(asset_id: String, asset_type: String, props: Dictionary, tile_pos: Vector2i):
	
	var scene_path = AGENT_SCENE_PATH if asset_type == "agent" else NPC_SCENE_PATH
	
	if not ResourceLoader.exists(scene_path, "PackedScene"):
		printerr("é”™è¯¯: æ‰¾ä¸åˆ°æ¨¡æ¿: %sã€‚è¯·åˆ›å»º %s åœºæ™¯ã€‚" % [scene_path, scene_path])
		return
		
	var scene_template = load(scene_path)
	var npc_instance = scene_template.instantiate()
	
	npc_instance.name = props.get("character_name", asset_id)
	for key in props:
		# æ£€æŸ¥å®ä¾‹æ˜¯å¦æœ‰è¿™ä¸ªå±æ€§ (ä¾‹å¦‚ "soul_file", "is_agent")
		if npc_instance.has_method("set"): # é€‚ç”¨äº @export å˜é‡
			npc_instance.set(key, props[key])
			
	# 1. è‡ªåŠ¨æ ¹æ®ç±»å‹æ·»åŠ ç»„ (ä¾‹å¦‚ "npc" æˆ– "agent")
	if not asset_type.is_empty():
		npc_instance.add_to_group(asset_type)

	# 2. è‡ªåŠ¨æ·»åŠ  JSON ä¸­å®šä¹‰çš„è¯­ä¹‰æ ‡ç­¾ (ä¾‹å¦‚ "shopkeeper")
	var semantic_tag = props.get("semantic_tag", "")
	if not semantic_tag.is_empty():
		npc_instance.add_to_group(semantic_tag)
		
	var nav_agent = npc_instance.get_node_or_null("NavigationAgent2D")
	if nav_agent:
		nav_agent.radius = 2*TILE_SIZE.x
	else:
		printerr("é”™è¯¯: %s åœºæ™¯ä¸­æ‰¾ä¸åˆ° 'NavigationAgent2D' å­èŠ‚ç‚¹!" % scene_path)
	
	var tex_path = ASSET_DIR.path_join(asset_id + ".png")
	if FileAccess.file_exists(tex_path):
		var img = Image.new()
		var err = img.load(tex_path)
		
		if err == OK:
			var tex = ImageTexture.create_from_image(img)
			# å‡è®¾ npc.tscn/agent.tscn ä¸Šçš„è„šæœ¬æœ‰ "set_texture" æ–¹æ³•
			if npc_instance.has_method("set_texture"):
				npc_instance.set_texture(tex)
		else:
			printerr("è­¦å‘Š: åŠ è½½NPCçº¹ç†å¤±è´¥ %s (é”™è¯¯ç : %s)" % [tex_path, err])
	else:
		printerr("è­¦å‘Š: æ‰¾ä¸åˆ°NPCçº¹ç†: %s" % tex_path)

	# 4. æ”¾ç½®åˆ°ä¸–ç•Œä¸­
	var local_pos_center = floor_layer.map_to_local(tile_pos)
	var global_pos_center = floor_layer.to_global(local_pos_center)
	world_y_sort.add_child(npc_instance)
	npc_instance.global_position = global_pos_center
	
	print("    - æˆåŠŸå®ä¾‹åŒ– %s: %s (çµé­‚: %s)" % [asset_type, npc_instance.name, props.get("soul_file", "æ— ")])
	
#func _fill_rect_with_sprites(container: Node2D, rect: Rect2i, tex: Texture2D, props: Dictionary, map_dims: Vector2i):
	#var texture_size = tex.get_size()
	#var TILE_HALF_WIDTH = TILE_SIZE.x / 2.0  # 8.0 åƒç´ 
	#var TILE_FULL_HEIGHT = TILE_SIZE.y       # 16.0 åƒç´ 
	#
	#for x in range(rect.position.x, rect.end.x):
		#for y in range(rect.position.y, rect.end.y):
			#
			## 1. è®¡ç®—é€»è¾‘ä½ç½®
			#var tile_pos = Vector2i(x, y)
			## 2. è®¡ç®—è¯¥é€»è¾‘ä½ç½®åœ¨ä¸–ç•Œä¸­çš„åƒç´ åæ ‡ (ç“¦ç‰‡çš„ä¸­å¿ƒç‚¹)
			#var world_pos_center = floor_layer.map_to_local(tile_pos)
			#
			## 3. ã€ã€ã€ ä½ è¦çš„ "Trick" è¡¥å¿é€»è¾‘ ã€‘ã€‘ã€‘
			#var offset_trick = Vector2.ZERO
			#
			## æ£€æŸ¥æ˜¯ä¸æ˜¯åœ¨æœ€å·¦è¾¹çš„å¢™ (x=0)
			## å¹¶ä¸”è¿™ä¸ª rect æœ¬èº«å°±æ˜¯ä» x=0 å¼€å§‹çš„ (é˜²æ­¢ç§»åŠ¨å†…éƒ¨å¢™)
			#if tile_pos.x == 0 and rect.position.x == 0:
				#offset_trick.x = -50 # å‘å·¦ç§»åŠ¨ 8 åƒç´ 
#
			## æ£€æŸ¥æ˜¯ä¸æ˜¯åœ¨æœ€å³è¾¹çš„å¢™ (x=24)
			## å¹¶ä¸”è¿™ä¸ª rect çš„ x åæ ‡æ˜¯ 24 (map_dims.x - 1)
			#elif tile_pos.x == map_dims.x - 1 and rect.position.x == map_dims.x - 1:
				#offset_trick.x = -TILE_HALF_WIDTH # ä¹Ÿå‘å·¦ç§»åŠ¨ 8 åƒç´ 
				#
			## æ£€æŸ¥æ˜¯ä¸æ˜¯åœ¨æœ€åè¾¹çš„å¢™ (y=0)
			## å¹¶ä¸”è¿™ä¸ª rect æœ¬èº«å°±æ˜¯ä» y=0 å¼€å§‹çš„
			#if tile_pos.y == 0 and rect.position.y == 0:
				## map_to_local ç»™äº† y=16 (ç“¦ç‰‡ä¸­å¿ƒ)
				## æˆ‘ä»¬æƒ³è®©å¢™çš„åº•è¾¹åœ¨ y=0
				#offset_trick.y = -TILE_FULL_HEIGHT # å‘ä¸Šç§»åŠ¨ 16 åƒç´ 
			#
			## ã€ã€ã€ è¡¥å¿é€»è¾‘ç»“æŸ ã€‘ã€‘ã€‘
			#
			## 3. åˆ›å»º Sprite
			#var sprite = Sprite2D.new()
			#sprite.texture = tex
			#sprite.name = "%s_(%d,%d)" % [tex.resource_path.get_file().get_basename(), x, y]
			#
			## 4. ã€æ ¸å¿ƒï¼šä½¿ç”¨ "åº•è¾¹ä¸­ç‚¹" å¯¹é½æ³•ã€‘
			#sprite.centered = false 
			#sprite.offset = Vector2(-texture_size.x / 2.0, -texture_size.y)
			#sprite.position = world_pos_center
			#
			## 5. æ·»åŠ è¯­ä¹‰æ ‡ç­¾ (ä¾‹å¦‚ "wall")
			#var semantic_tag = props.get("semantic_tag", "")
			#if not semantic_tag.is_empty():
				#sprite.add_to_group(semantic_tag)
			#
			## 6. è®¾ç½®ç‰©ç†/å¯¼èˆªå±æ€§
			#set_object_properties(sprite, props, TILE_SIZE)
			#
			## 7. æ·»åŠ åˆ° Y-Sort å®¹å™¨ä¸­
			#container.add_child(sprite)
			
func _fill_rect_with_sprites(container: Node2D, rect: Rect2i, tex: Texture2D, props: Dictionary, map_dims: Vector2i):
	var texture_size = tex.get_size()
	
	var TILE_HALF_WIDTH = TILE_SIZE.x / 2.0  # 8.0 åƒç´ 
	
	print(map_dims.y)
	print("=========================================================================")
	
	var is_top_rect = (rect.position.y == 0 and rect.position.x == 0 and rect.size.x == map_dims.x)
	#var is_bottom_rect = (rect.position.y == map_dims.y and rect.position.x == 0 and rect.size.x == map_dims.x)
	var is_bottom_rect = (rect.position.y == map_dims.y)
	
	var is_left_rect = (rect.position.x == 0 and rect.position.y > 0 and rect.size.x == 1)
	var is_right_rect = (rect.position.x == map_dims.x - 1 and rect.position.y > 0 and rect.size.x == 1)

	for x in range(rect.position.x, rect.end.x):
		for y in range(rect.position.y, rect.end.y):
			
			var tile_pos = Vector2i(x, y)
			
			# 1. è·å–å…¨å±€åŸºç¡€åæ ‡ (æ— å˜åŒ–)
			var base_local_pos = floor_layer.map_to_local(tile_pos)
			var base_global_pos = floor_layer.to_global(base_local_pos)
			
			var offset_trick = Vector2.ZERO  
			var scale_trick = Vector2(1.0, 1.0) 
			
			if is_left_rect:
				# A. è¿™æ˜¯å·¦ä¾§å¢™ (x=0)
				offset_trick.x = -TILE_HALF_WIDTH # å‘å·¦ç§»åŠ¨ 8
			
			elif is_right_rect:
				# B. è¿™æ˜¯å³ä¾§å¢™ (x=24)
				offset_trick.x = TILE_HALF_WIDTH # å‘å³ç§»åŠ¨ 8
			
			elif is_top_rect or is_bottom_rect:
				# C. è¿™æ˜¯é¡¶éƒ¨å¢™ (y=0) æˆ– åº•éƒ¨å¢™ (y=19)
				if tile_pos.x == 0:
					# å¢™è§’-æœ€å·¦ (x=0)
					scale_trick.x = 1.5 
					offset_trick.x = - (TILE_HALF_WIDTH / 2.0) # -4 åƒç´ 
					
				elif tile_pos.x == map_dims.x - 1:
					# å¢™è§’-æœ€å³ (x=24)
					scale_trick.x = 1.5
					offset_trick.x = (TILE_HALF_WIDTH / 2.0) # +4 åƒç´ 
			
			# 3. åˆ›å»º Sprite (æ— å˜åŒ–)
			var sprite = Sprite2D.new()
			sprite.texture = tex
			sprite.name = "%s_(%d,%d)" % [tex.resource_path.get_file().get_basename(), x, y]
			
			# 4. å¯¹é½æ³• (æ— å˜åŒ–)
			sprite.centered = false 
			sprite.offset = Vector2(-texture_size.x / 2.0, -texture_size.y)
			
			# 5. åº”ç”¨ç¼©æ”¾ (æ— å˜åŒ–)
			sprite.scale = scale_trick
			
			# 6. è®¾ç½®ç‰©ç†/å¯¼èˆª
			
			# å°† Vector2i(TILE_SIZE) è½¬æ¢ä¸º Vector2
			var scaled_base_size = Vector2(TILE_SIZE) * scale_trick
			
			set_object_properties(sprite, props, scaled_base_size)
			
			# 7. æ·»åŠ åˆ°åœºæ™¯ (æ— å˜åŒ–)
			container.add_child(sprite)
			
			# 8. è®¾ç½®å…¨å±€åæ ‡ (æ— å˜åŒ–)
			sprite.global_position = base_global_pos + offset_trick


func _unhandled_input(event):
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT and event.is_pressed():
		
		print("ä¸Šå¸æ¨¡å¼: ç‚¹å‡»äº†ç©ºç™½å¤„ (å–æ¶ˆé€‰æ‹©)")
		
		GlobalState.set_selected(null) # å–æ¶ˆé€‰æ‹©



func capture_hd_screenshot_without_moving_nodes(save_path: String):
	print("ğŸ“¸ å‡†å¤‡è¿›è¡Œ 8K æˆªå›¾ (çº¯å‡€åŸè‰²ç‰ˆ)...")
	
	# --- 1. åŸºç¡€å‚æ•° ---
	var map_width_in_tiles = 80
	var map_height_in_tiles = 80
	var tile_size = 16 
	var map_pixel_size = Vector2(map_width_in_tiles * tile_size, map_height_in_tiles * tile_size)
	var target_size = Vector2i(7280, 7280) # 8K
	
	# --- 2. åˆ›å»º Viewport ---
	var sub_viewport = SubViewport.new()
	sub_viewport.size = target_size
	
	sub_viewport.world_2d = get_viewport().world_2d
	
	sub_viewport.render_target_update_mode = SubViewport.UPDATE_ALWAYS
	
	sub_viewport.disable_3d = true
	sub_viewport.use_hdr_2d = false
	
	sub_viewport.canvas_item_default_texture_filter = Viewport.DEFAULT_CANVAS_ITEM_TEXTURE_FILTER_NEAREST
	sub_viewport.snap_2d_transforms_to_pixel = true
	sub_viewport.snap_2d_vertices_to_pixel = true
	

	var zoom_x = float(target_size.x) / map_pixel_size.x
	var zoom_y = float(target_size.y) / map_pixel_size.y
	var best_zoom = min(zoom_x, zoom_y)
	
	var temp_camera = Camera2D.new()
	sub_viewport.add_child(temp_camera)
	temp_camera.global_position = map_pixel_size / 2.0
	temp_camera.zoom = Vector2(best_zoom, best_zoom)
	
	add_child(sub_viewport)
	
	await get_tree().process_frame
	await get_tree().process_frame
	await get_tree().process_frame
	await RenderingServer.frame_post_draw
	
	# --- 5. è·å–å›¾åƒ ---
	var tex = sub_viewport.get_texture()
	var img = tex.get_image()
	
	if img:
		img.save_png(save_path)
		print("âœ… æˆªå›¾ä¿å­˜æˆåŠŸ: ", save_path)
	
	sub_viewport.queue_free()
